--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <div class="contact-buttons">
       <a href="mailto:mohanbabukotte@gmail.com" class="button">📧 Email Me</a>
-      <a href="Mohan_Babu_Kotte_Resume.pdf" class="button" download>📄 Download Resume</a>
+      <a href="MohanBabu_Resume.pdf" class="button" download>📄 Download Resume</a>
       <a href="https://github.com/your-github-username" target="_blank" class="button">💻 GitHub Account</a>
       <a href="https://www.linkedin.com/in/mohan-babu-kotte/" target="_blank" class="button">🔗 LinkedIn Profile</a>
     </div>
